# autlas

./: .gitignore  AUDIT.md  GUIDE_SCRIPT_INTEGRATION.md  REFACTOR_CHECKLIST.md  STORE_ARCHITECTURE.md  STORE_ARCHITECTURE_ru.md  TODO.md  VIM_TEST_PLAN.md  ahk_windows.txt  git-workflow.html  manager_cache.txt  manager_data.ini  package-lock.json
.github/workflows/: deploy-landing.yml  release-app.yml
STORE_ARCHITECTURE_ru_STEPS/: STORE_ARCHITECTURE_ru_step_1.md  STORE_ARCHITECTURE_ru_step_2.md  STORE_ARCHITECTURE_ru_step_3.md  STORE_ARCHITECTURE_ru_step_6.md  STORE_ARCHITECTURE_ru_step_7.md
docs/: ARCHITECTURE.md  STORE_ARCHITECTURE_ru.md  TECHDEBT.md  TOAST_PROPOSAL.md  TOAST_UX_GUIDE.md
docs/STORE_ARCHITECTURE_ru_STEPS/: STORE_ARCHITECTURE_ru_step_2.md  STORE_ARCHITECTURE_ru_step_3.md  STORE_ARCHITECTURE_ru_step_4.md  STORE_ARCHITECTURE_ru_step_5.md  STORE_ARCHITECTURE_ru_step_8.md
docs/archive/: ARCHITECTURE_RU.md  ARCHITECTURE_tauri_old.md  TOAST_UX_GUIDE.md
landingReact/: .gitignore  .scope-landing.py  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
landingReact/patches/: App.tsx.patch  i18n.ts.patch
tauri_app/: .gitignore  ARCHITECTURE_AUDIT.md  archive-build.js  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vitest.config.ts
tauri_app/src-tauri/: Cargo.toml  tauri.conf.json
tauri_app/src-tauri/capabilities/: default.json
tauri_app/src-tauri/icons/: icon.icns
tauri_app/src-tauri/src/: db.rs  everything.rs  lib.rs  migrate.rs  native_popup.rs  reconcile.rs
tauri_app/src-tauri/tests/: db_critical.rs
todo/: TODO.md
(+177 files in other folders)
